--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,6 @@ services:
   app:
     build: ./
     ports:
-      - "3000:3000"
+      - "80:80"
     volumes:
-      - ./src:/node-express/src
+      - ./src:/opt/drupal
