PVC and database support.
- Adds yaml for pvc
- Adds yaml for configmap
- Updates deploy config to bind pvc
- Adds stored settings.php
- Adds drush to composer

--- a/k8s/deploy.yaml
+++ b/k8s/deploy.yaml
@@ -18,6 +18,12 @@ spec:
       - name: drupal
         image: ${IMAGE_NAME}:${IMAGE_TAG}
         imagePullPolicy: Always
+        envFrom:
+            - configMapRef:
+                name: drupal-configmap
+        volumeMounts:
+          - name: drupal-data
+            mountPath: /opt/drupal/web/sites/default/files
         resources:
           requests:
             memory: "200Mi"
@@ -29,3 +35,7 @@ spec:
         - containerPort: 80
       imagePullSecrets:
         - name: quant-cloud
+  volumes:
+    - name: drupal-data
+      persistentVolumeClaim:
+        claimName: drupal-pvc
