--- a/src/composer.json
+++ b/src/composer.json
@@ -18,10 +18,16 @@
         "composer/installers": "^2.0",
         "drupal/core-composer-scaffold": "^10.0",
         "drupal/core-project-message": "^10.0",
-        "drupal/core-recommended": "^10.0"
+        "drupal/core-recommended": "^10.0",
+        "drush/drush": "^11.5"
     },
     "conflict": {
         "drupal/drupal": "*"
+    },
+    "scripts": {
+        "post-install-cmd": [
+            "@php -r \"copy('settings.php', 'web/sites/default/settings.php');\""
+        ]
     },
     "minimum-stability": "stable",
     "prefer-stable": true,
