--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,22 @@
 version: '3.3'
 
+x-environment: &environment
+  environment:
+    MARIADB_USER: drupal
+    MARIADB_PASSWORD: drupal
+    MARIADB_DATABASE: drupal
+    MARIADB_HOST: mariadb
+    MARIADB_ROOT_PASSWORD: drupal
+
 services:
   app:
     build: ./
     ports:
       - "80:80"
+    <<: *environment
     volumes:
       - ./src:/opt/drupal
+
+  mariadb:
+    image: mariadb:latest
+    <<: *environment
