Ensure config-map are always strings.

--- a/k8s/config-map.yaml
+++ b/k8s/config-map.yaml
@@ -3,8 +3,8 @@ kind: ConfigMap
 metadata:
   name: drupal-config
 data:
-    MARIADB_USER: ${MARIADB_USER}
-    MARIADB_PASSWORD: ${MARIADB_PASSWORD}
-    MARIADB_DATABASE: ${MARIADB_DATABASE}
-    MARIADB_HOST: ${MARIADB_HOST}
-    MARIADB_PORT: ${MARIADB_PORT}
+    MARIADB_USER: "${MARIADB_USER}"
+    MARIADB_PASSWORD: "${MARIADB_PASSWORD}"
+    MARIADB_DATABASE: "${MARIADB_DATABASE}"
+    MARIADB_HOST: "${MARIADB_HOST}"
+    MARIADB_PORT: "${MARIADB_PORT}"
