--- a/.github/workflows/workflows.yaml
+++ b/.github/workflows/workflows.yaml
@@ -26,7 +26,9 @@ jobs:
           SECTION_API_TOKEN: "${{ secrets.SECTION_API_TOKEN }}"
         run: |
           ./ci/init-kube.sh
-          echo "KUBE_CONFIG_DATA=$(cat ~/.kube/config | base64)<<EOF" >> $GITHUB_ENV
+          echo 'KUBE_CONFIG_DATA<<EOF' >> $GITHUB_ENV
+          echo $(cat ~/.kube/config | base64) >> $GITHUB_ENV
+          echo 'EOF' >> $GITHUB_ENV
 
       - name: Log in to the Container registry
         uses: docker/login-action@v2
