--- a/.github/workflows/workflows.yaml
+++ b/.github/workflows/workflows.yaml
@@ -26,7 +26,7 @@ jobs:
           SECTION_API_TOKEN: "${{ secrets.SECTION_API_TOKEN }}"
         run: |
           ./ci/init-kube.sh
-          echo 'KUBE_CONFIG_DATA<<EOF' >> $GITHUB_ENV
+          echo 'KUBECONFIG<<EOF' >> $GITHUB_ENV
           echo $(cat ~/.kube/config | base64) >> $GITHUB_ENV
           echo 'EOF' >> $GITHUB_ENV
 
@@ -50,7 +50,7 @@ jobs:
           KUBE_CONFIG_DATA: ${{ env.KUBECONFIG }}
         with:
           command: |
-            helm upgrade --install drupal \
+            helm upgrade --dry-run --install drupal \
               charts/drupal \
               --set appVersion="${{ github.sha }}" \
               --set images.drupal.repository="${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}" \
