--- a/charts/drupal/values.yaml
+++ b/charts/drupal/values.yaml
@@ -1,6 +1,5 @@
-# Default values for shazamme.
 # This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
+# Provides default variables to be passed into your templates.
 
 replicaCount: 1
 
@@ -24,7 +23,6 @@ images:
 
 imagePullSecret:
   create: true
-  name: registry-pull-token
   username: null
   password: null
   registry: registry.quant.cloud
