--- a/.github/workflows/workflows.yaml
+++ b/.github/workflows/workflows.yaml
@@ -55,6 +55,8 @@ jobs:
               --set appVersion="${{ github.sha }}" \
               --set images.drupal.repository="${{ env.IMAGE_NAME }}" \
               --set images.drupal.tag="${{ env.IMAGE_TAG }}" \
+              --set imagePullSecret.password="${{ secrets.REGISTRY_TOKEN }}" \
+              --set imagePullSecret.username="${{ secrets.CONTAINER_REGISTRY_USER }}" \
               --set secrets.registry.user="${{ secrets.CONTAINER_REGISTRY_USER }}" \
               --set secrets.registry.token="${{ secrets.CONTAINER_REGISTRY_TOKEN }}" \
               --set secrets.database.username="${{ secrets.MARIADB_USER }}" \
