--- a/.github/workflows/workflows.yaml
+++ b/.github/workflows/workflows.yaml
@@ -37,16 +37,17 @@ jobs:
           username: ${{ secrets.CONTAINER_REGISTRY_USER }}
           password: ${{ secrets.CONTAINER_REGISTRY_TOKEN }}
 
+      - name: Use buildx
+        uses: docker/setup-buildx-action@v2
+
       - name: Build and push Docker image
-        steps:
-          - uses: docker/setup-buildx-action@v2
-          - uses: docker/build-push-action@v4
-            with:
-              context: .
-              push: true
-              tags: ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
-              cache-from: type=gha
-              cache-to: type=gha,mode=max
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Deploy Helm chart
         uses: koslibpro/helm-eks-action@master
