--- a/charts/drupal/templates/post-deploy.yaml
+++ b/charts/drupal/templates/post-deploy.yaml
@@ -1,35 +1,35 @@
-apiVersion: batch/v1
-kind: Job
-metadata:
-  name: drupal-post-deploy
-  labels:
-    app: {{ .Values.images.drupal.name }}
-    version: {{ .Values.appVersion }}
-  annotations:
-    "helm.sh/hook": post-upgrade
-    "helm.sh/hook-weight": "10"
-    "helm.sh/hook-delete-policy": before-hook-creation
-spec:
-  template:
-    metadata:
-      labels:
-        app: {{ .Values.images.drupal.name }}
-        version: {{ .Values.appVersion }}
-    spec:
-      imagePullSecrets:
-        - name: quant-cloud
-      volumes:
-        - name: drupal-data
-          persistentVolumeClaim:
-            claimName: drupal-pvc
-      initContainers:
-        - name: run-post-deploy
-          image: "{{ .Values.images.drupal.repository }}:{{ .Values.images.drupal.tag }}"
-          command:
-            - /opt/deployment-scripts/post-deploy.sh
-          envFrom:
-            - configMapRef:
-                name: drupal-config
-          volumeMounts:
-            - name: drupal-data
-              mountPath: /opt/drupal/web/sites/default/files
+# apiVersion: batch/v1
+# kind: Job
+# metadata:
+#   name: drupal-post-deploy
+#   labels:
+#     app: {{ .Values.images.drupal.name }}
+#     version: {{ .Values.appVersion }}
+#   annotations:
+#     "helm.sh/hook": post-upgrade
+#     "helm.sh/hook-weight": "10"
+#     "helm.sh/hook-delete-policy": before-hook-creation
+# spec:
+#   template:
+#     metadata:
+#       labels:
+#         app: {{ .Values.images.drupal.name }}
+#         version: {{ .Values.appVersion }}
+#     spec:
+#       imagePullSecrets:
+#         - name: quant-cloud
+#       volumes:
+#         - name: drupal-data
+#           persistentVolumeClaim:
+#             claimName: drupal-pvc
+#       initContainers:
+#         - name: run-post-deploy
+#           image: "{{ .Values.images.drupal.repository }}:{{ .Values.images.drupal.tag }}"
+#           command:
+#             - /opt/deployment-scripts/post-deploy.sh
+#           envFrom:
+#             - configMapRef:
+#                 name: drupal-config
+#           volumeMounts:
+#             - name: drupal-data
+#               mountPath: /opt/drupal/web/sites/default/files
