Prevent build stampede. Fix deploy name.

--- a/.github/workflows/workflows.yaml
+++ b/.github/workflows/workflows.yaml
@@ -9,6 +9,10 @@ env:
   IMAGE_NAME: ${{ secrets.CONTAINER_REGISTRY_URL }}/${{ secrets.CONTAINER_REGISTRY_PROJECT_PREFIX }}/${{ secrets.QUANT_PROJECT_ID }}
   IMAGE_TAG: latest
 
+concurrency:
+  group: ${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build-push:
     runs-on: ubuntu-latest
