--- a/src/composer.json
+++ b/src/composer.json
@@ -19,6 +19,7 @@
         "drupal/core-composer-scaffold": "^10.0",
         "drupal/core-project-message": "^10.0",
         "drupal/core-recommended": "^10.0",
+        "drupal/s3fs": "^3.1",
         "drush/drush": "^11.5"
     },
     "conflict": {
