--- a/.github/workflows/workflows.yaml
+++ b/.github/workflows/workflows.yaml
@@ -76,7 +76,8 @@ jobs:
         env:
           KUBECONFIG: # Unset
         run:
-          kubectl -n drupal get events --sort-by='{.lastTimestamp}'
+          kubectl version
+          kubectl get events --sort-by='{.lastTimestamp}'
           kubectl exec deploy/drupal -- /opt/deployment-scripts/post-deploy.sh
         if: success() || failure()
 
