--- a/charts/drupal/templates/pvc.yaml
+++ b/charts/drupal/templates/pvc.yaml
@@ -1,11 +1,11 @@
-# apiVersion: v1
-# kind: PersistentVolumeClaim
-# metadata:
-#   name: drupal-pvc
-# spec:
-#   storageClassName: nfs-client
-#   accessModes:
-#     - ReadWriteMany
-#   resources:
-#     requests:
-#       storage: 2Gi
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: drupal-pvc
+spec:
+  storageClassName: nfs-client
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: 2Gi
