--- a/charts/drupal/templates/hpa.yaml
+++ b/charts/drupal/templates/hpa.yaml
@@ -4,7 +4,7 @@ kind: HorizontalPodAutoscaler
 metadata:
   name: drupal
   labels:
-    {{- include "drupal.labels" . | nindent 4 }}
+    app: drupal
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
