--- a/charts/drupal/values.yaml
+++ b/charts/drupal/values.yaml
@@ -1,7 +1,7 @@
 # This is a YAML-formatted file.
 # Provides default variables to be passed into your templates.
 
-replicaCount: 1
+replicaCount: 2
 
 nameOverride: ""
 fullnameOverride: ""
@@ -33,7 +33,7 @@ service:
   port: 80
 
 autoscaling:
-  enabled: true
+  enabled: false
   minReplicas: 2
   maxReplicas: 2
   targetCPUUtilizationPercentage: 80
