--- a/charts/drupal/values.yaml
+++ b/charts/drupal/values.yaml
@@ -23,7 +23,10 @@ images:
 
 podAnnotations: {}
 
-podSecurityContext: {}
+# www-data.
+podSecurityContext:
+  runAsUser: 33
+  fsGroup: 33
 
 securityContext: {}
 
