--- a/src/composer.json
+++ b/src/composer.json
@@ -19,7 +19,8 @@
         "drupal/core-composer-scaffold": "^10.0",
         "drupal/core-project-message": "^10.0",
         "drupal/core-recommended": "^10.0",
-        "drupal/s3fs": "^3.1",
+        "drupal/devel": "^5.1",
+        "drupal/quantcdn": "^1.5",
         "drush/drush": "^11.5"
     },
     "conflict": {
