Fixed rev proxy header.

--- a/.docker/000-default.conf
+++ b/.docker/000-default.conf
@@ -28,7 +28,9 @@
         #Include conf-available/serve-cgi-bin.conf
         SetEnvIf X_QUANT_HTTP_HOST ".+" TempValue=$0
         RequestHeader set Host %{TempValue}e env=TempValue
+        RequestHeader set X-Forwarded-Host %{TempValue}e env=TempValue
         RequestHeader unset X_QUANT_HTTP_HOST
+        RequestHeader unset TempValue
         RequestHeader set X-Forwarded-Proto "https"
 
 </VirtualHost>
