--- a/src/.gitignore
+++ b/src/.gitignore
@@ -17,26 +17,5 @@
 # custom module, theme, etc., are not ignored unless you purposely do so.
 vendor/
 
-# Ignore configuration files that may contain sensitive information.
-web/sites/*/settings*.php
-web/sites/*/services*.yml
-
-# Ignore paths that contain user-generated content.
-web/sites/*/files
-web/sites/*/private
-
-# Ignore multi-site test environment.
-web/sites/simpletest
-
-# If you prefer to store your .gitignore file in the sites/ folder, comment
-# or delete the previous settings and uncomment the following ones, instead.
-
-# Ignore configuration files that may contain sensitive information.
-# */settings*.php
-
-# Ignore paths that contain user-generated content.
-# */files
-# */private
-
-# Ignore multi-site test environment.
-# simpletest
+# Ignore the web folder, except custom themes and modules.
+web/*
