--- a/src/composer.json
+++ b/src/composer.json
@@ -28,7 +28,8 @@
     },
     "scripts": {
         "post-install-cmd": [
-            "@php -r \"copy('settings.php', 'web/sites/default/settings.php');\""
+            "@php -r \"copy('settings.php', 'web/sites/default/settings.php');\"",
+            "@php -r \"copy('services.yml', 'web/sites/default/services.yml');\""
         ]
     },
     "minimum-stability": "stable",
