--- a/.github/workflows/workflows.yaml
+++ b/.github/workflows/workflows.yaml
@@ -2,7 +2,7 @@ name: Deploy to Quant Cloud
 
 on:
   push:
-    branches: [master, develop]
+    branches: [master]
 
 env:
   REGISTRY: ${{ secrets.CONTAINER_REGISTRY_URL }}
