Track custom modules and themes.

--- a/src/.gitignore
+++ b/src/.gitignore
@@ -19,3 +19,7 @@ vendor/
 
 # Ignore the web folder, except custom themes and modules.
 web/*
+!web/modules
+!web/themes
+web/modules/contrib
+web/themes/contrib
