Add ssmtp, redis, sshd, latest code & settings.

--- a/.docker/000-default.conf
+++ b/.docker/000-default.conf
@@ -31,7 +31,10 @@
         RequestHeader set X-Forwarded-Host %{TempValue}e env=TempValue
         RequestHeader unset X_QUANT_HTTP_HOST
         RequestHeader unset TempValue
-        RequestHeader set X-Forwarded-Proto "https"
+
+        <If "%{HTTP_HOST} != 'localhost'">
+          RequestHeader set X-Forwarded-Proto "https"
+        </If>
 
 </VirtualHost>
 
