--- a/.github/workflows/cron.yaml
+++ b/.github/workflows/cron.yaml
@@ -11,17 +11,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          ref: main
 
       - name: Set environment for branch
         run: |
-          if [[ $GITHUB_REF == 'refs/heads/master' ]]; then
-            echo "SECTION_K8S_API_URL=${{ secrets.SECTION_K8S_API_URL }}" >> "$GITHUB_ENV"
-            echo "SECTION_API_TOKEN=${{ secrets.SECTION_API_TOKEN }}" >> "$GITHUB_ENV"
-          else
-            echo "** Cron schedule only runs on master branch"
-            exit 1
-          fi
-
+          echo "SECTION_K8S_API_URL=${{ secrets.SECTION_K8S_API_URL_PROD }}" >> "$GITHUB_ENV"
+          echo "SECTION_API_TOKEN=${{ secrets.SECTION_API_TOKEN_PROD }}" >> "$GITHUB_ENV"
       - name: Setup kubeconfig
         run: |
           ./ci/init-kube.sh
