--- a/.github/workflows/db-backup.yaml
+++ b/.github/workflows/db-backup.yaml
@@ -10,12 +10,24 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Set environment for branch
+        run: |
+          if [[ $GITHUB_REF == 'refs/heads/main' ]]; then
+            echo "SECTION_K8S_API_URL=${{ secrets.SECTION_K8S_API_URL_PROD }}" >> "$GITHUB_ENV"
+            echo "SECTION_API_TOKEN=${{ secrets.SECTION_API_TOKEN_PROD }}" >> "$GITHUB_ENV"
+          elif [[ $GITHUB_REF == 'refs/heads/staging' ]]; then
+            echo "SECTION_K8S_API_URL=${{ secrets.SECTION_K8S_API_URL_STAGE }}" >> "$GITHUB_ENV"
+            echo "SECTION_API_TOKEN=${{ secrets.SECTION_API_TOKEN_STAGE }}" >> "$GITHUB_ENV"
+          else
+            echo "** CI pipelines are not configured for this branch"
+            exit 1
+          fi
       - name: Setup kubeconfig
-        env:
-          SECTION_K8S_API_URL: "${{ secrets.SECTION_K8S_API_URL }}"
-          SECTION_API_TOKEN: "${{ secrets.SECTION_API_TOKEN }}"
         run: |
           ./ci/init-kube.sh
+          echo 'KUBECONFIG<<EOF' >> $GITHUB_ENV
+          echo $(cat ~/.kube/config | base64) >> $GITHUB_ENV
+          echo 'EOF' >> $GITHUB_ENV
 
       - name: Prepare backup location
         run: |
@@ -25,6 +37,7 @@ jobs:
 
       - name: Run the database backup
         env:
+          KUBECONFIG: # Unset
           FILENAME: ${{ steps.backup.outputs.file }}
           DIR: ${{ steps.backup.outputs.dir }}
         run: |
