--- a/src/.gitignore
+++ b/src/.gitignore
@@ -15,11 +15,25 @@
 # Generally you should only ignore the root vendor directory. It's important
 # that core/assets/vendor and any other vendor directories within contrib or
 # custom module, theme, etc., are not ignored unless you purposely do so.
-vendor/
+/vendor
 
 # Ignore the web folder, except custom themes and modules.
 web/*
 !web/modules
 !web/themes
+!web/profiles
 web/modules/contrib
 web/themes/contrib
+/.csslintrc
+/.eslintignore
+/.eslintrc.json
+/.ht.router.php
+/.htaccess
+/INSTALL.txt
+/README.md
+/autoload.php
+/example.gitignore
+/index.php
+/robots.txt
+/update.php
+/web.config
