--- a/src/composer.json
+++ b/src/composer.json
@@ -21,6 +21,7 @@
         "drupal/core-recommended": "^10.0",
         "drupal/devel": "^5.1",
         "drupal/quantcdn": "^1.5",
+        "drupal/redis": "^1.6",
         "drush/drush": "^11.5"
     },
     "conflict": {
