Explicit on container.

--- a/.github/workflows/db-backup.yaml
+++ b/.github/workflows/db-backup.yaml
@@ -30,7 +30,7 @@ jobs:
           DIR: ${{ steps.backup.outputs.dir }}
         run: |
           mkdir -p $DIR
-          kubectl exec deploy/drupal -- drush sql:dump > $DIR/$FILENAME
+          kubectl exec deploy/drupal --container=drupal -- drush sql:dump > $DIR/$FILENAME
 
       - uses: actions/upload-artifact@v3
         with:
