--- a/.github/workflows/cron.yaml
+++ b/.github/workflows/cron.yaml
@@ -16,17 +16,12 @@ jobs:
 
       - name: Set environment for branch
         run: |
-          if [[ $GITHUB_REF == 'refs/heads/master' ]]; then
-            echo "SECTION_K8S_API_URL=${{ secrets.SECTION_K8S_API_URL }}" >> "$GITHUB_ENV"
-            echo "SECTION_API_TOKEN=${{ secrets.SECTION_K8S_API_URL }}" >> "$GITHUB_ENV"
-          else
-            echo "** Cron schedule only runs on master branch"
-            exit 1
-          fi
+          echo "SECTION_K8S_API_URL=${{ secrets.SECTION_K8S_API_URL_PROD }}" >> "$GITHUB_ENV"
+          echo "SECTION_API_TOKEN=${{ secrets.SECTION_API_TOKEN_PROD }}" >> "$GITHUB_ENV"
       - name: Setup kubeconfig
         run: |
           ./ci/init-kube.sh
 
       - name: Run the scheduled task
         run: |
-          kubectl exec deploy/drupal -- /opt/deployment-scripts/cron.sh
+          kubectl exec deploy/drupal --container=drupal -- /opt/deployment-scripts/cron.sh
