--- a/.github/workflows/cron.yaml
+++ b/.github/workflows/cron.yaml
@@ -16,8 +16,8 @@ jobs:
 
       - name: Set environment for branch
         run: |
-          echo "SECTION_K8S_API_URL=${{ secrets.SECTION_K8S_API_URL_PROD }}" >> "$GITHUB_ENV"
-          echo "SECTION_API_TOKEN=${{ secrets.SECTION_API_TOKEN_PROD }}" >> "$GITHUB_ENV"
+          echo "SECTION_K8S_API_URL=${{ secrets.SECTION_K8S_API_URL }}" >> "$GITHUB_ENV"
+          echo "SECTION_API_TOKEN=${{ secrets.SECTION_API_TOKEN }}" >> "$GITHUB_ENV"
       - name: Setup kubeconfig
         run: |
           ./ci/init-kube.sh
