Add cache policy support to redis.
Add redis cache policy support

Add memory policy.

--- a/charts/drupal/values.yaml
+++ b/charts/drupal/values.yaml
@@ -28,6 +28,7 @@ images:
     repository: redis
     tag: latest
     port: 6379
+    cachePolicy: volatile-lru
     resources:
       limits:
         cpu: 500m
