--- a/charts/drupal/templates/app.yaml
+++ b/charts/drupal/templates/app.yaml
@@ -95,7 +95,7 @@ spec:
             - redis-server
             - --save 60 1
             - --loglevel warning
-            - --maxmemory-policy {{ .Values.images.redis.cachePolicy | default('volatile-lru') }}
+            - --maxmemory-policy {{ .Values.images.redis.cachePolicy | default "volatile-lru" }}
           imagePullPolicy: {{ .Values.images.redis.pullPolicy | default .Values.images.pullPolicy }}
           ports:
             - name: {{ .Values.images.redis.name }}
